Some MP4 Videos Still Fail to Play on Big Sur
Categories
(Core :: Security: Process Sandboxing, defect, P1)
Tracking
()
People
(Reporter: haik, Assigned: haik)
References
(Blocks 1 open bug)
Details
Attachments
(3 files)
|
469.29 KB,
image/png
|
Details | |
|
1.19 MB,
image/png
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
jcristau
:
approval-mozilla-esr78+
|
Details | Review |
On Nightly running on Big Sur Beta 3 (20A5323l), some MP4 videos fail to play and an error page is shown with "Video can't be played because the file is corrupt."
The same video plays on Nightly on macOS 10.15.
| Assignee | ||
Comment 1•5 years ago
|
||
Comment 2•5 years ago
|
||
Is there reason to believe that this is related to sandboxing again, similar to bug 1647816?
| Assignee | ||
Comment 3•5 years ago
|
||
(In reply to Stephen A Pohl [:spohl] from comment #2)
Is there reason to believe that this is related to sandboxing again, similar to bug 1647816?
Yes, I can't reproduce it with the sandbox disabled so I'll recategorize this a sandbox issue.
| Assignee | ||
Comment 4•5 years ago
|
||
The error appears to be caused by the call to VTDecompressionSessionCreate() in mozilla::AppleVTDecoder::InitializeSession() failing. The returned error is -12913: kVTVideoDecoderNotAvailableNowErr.
After adding access to the com.apple.trustd.agent service, the problem is not reproducible. From the trustd(8) man page "trustd provides services for evaluating trust in certificates for all processes on the system."
I tried using Console.app and the log command to get more information about the failure, but I haven't seen any error messages or TCC failures that might provide more information about why VTDecompressionSessionCreate() depends on the trustd.agent service. WebKit also allows this service in its WebProcess policy and it is allowed by App Store apps due to its inclusion in system.sb which is imported by application.sb on the macOS versions I checked (10.15 and 11.0 Beta 3).
| Assignee | ||
Comment 5•5 years ago
|
||
Allow access to the "com.apple.trustd.agent" service in the content process sandbox. VTDecompressionSessionCreate() fails without it, causing playback failure for some MP4 videos.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 7•5 years ago
|
||
I'll file an uplift request for Beta after the fix gets more testing on Nightly.
Comment 8•5 years ago
|
||
| bugherder | ||
Comment 9•5 years ago
|
||
(In reply to Haik Aftandilian [:haik] from comment #0)
Confirmed that this sample video now plays correctly since applying 81.0a1 (2020-07-30) update on Big Sur (10.16) Beta 3.
Comment 10•5 years ago
|
||
Should this video fix be uplifted to ESR 78? ESR 78 will be supported until mid-2022.
| Assignee | ||
Comment 11•5 years ago
|
||
(In reply to Chris Peterson [:cpeterson] from comment #10)
Should this video fix be uplifted to ESR 78? ESR 78 will be supported until mid-2022.
Yes, we will need to uplift this to ESR 78 along with other Big Sur dependencies. We will be discussing the plan for ESR 68 and whether or not we need Big Sur fixes in the last ESR 68 release given the timing.
Updated•5 years ago
|
| Assignee | ||
Comment 12•5 years ago
|
||
Comment on attachment 9166707 [details]
Bug 1655655 - Some MP4 Videos Fail to Play on Big Sur r?spohl!
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: This fix is required for some videos to play on Firefox on the new macOS version (11.0 Big Sur) expected to release within the next few months.
- User impact if declined: Without the fix, some MP4 videos will fail to play on Firefox 78 ESR on the new macOS version (11.0 Big Sur) expected to release within the next few months.
- Fix Landed on Version: 81
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The changes are Mac-specific. The changes touch some Mac sandboxing OS version checks and include a small sandbox rule change to allow a new service when running on macOS 11.0 Big Sur.
- String or UUID changes made by this patch:
Beta/Release Uplift Approval Request
- User impact if declined: Without the fix, some MP4 videos will fail to play on Firefox on the new macOS version (11.0 Big Sur) expected to release within the next few months.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Attempt to play the videos linked in comment 0 of this bug and bug 1647816 comment 9.
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The changes are Mac-specific. The changes touch some Mac sandboxing OS version checks and include a small content process sandbox rule change to allow a new service when running on macOS 11.0 Big Sur.
- String changes made/needed:
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 13•5 years ago
|
||
Comment on attachment 9166707 [details]
Bug 1655655 - Some MP4 Videos Fail to Play on Big Sur r?spohl!
compat for new macos version, approved for 80.0b4 and 78.2esr
Updated•5 years ago
|
Comment 14•5 years ago
|
||
| bugherder uplift | ||
Comment 15•5 years ago
|
||
| bugherder uplift | ||
Comment 16•5 years ago
|
||
Reproduced the issue on Firefox 79.0 (20200720193547)
Verified the fix on Firefox Beta 80.0b6 (20200807195315), Firefox Nightly 81.0a1 (20200810213634) and Firefox 78.2.0esr (20200806103136)
Description
•