Bug 1655655 - Some MP4 Videos Fail to Play on Big Sur r=spohl

Allow access to the "com.apple.trustd.agent" service in the content process sandbox. VTDecompressionSessionCreate() fails without it, causing playback failure for some MP4 videos.

Translate deprecated OS version numbers so that sandbox version checks don't need to check for 10.16.

Differential Revision: https://phabricator.services.mozilla.com/D85213